# mt-prod

./: .gitignore  CHANGES  LICENSE  Makefile.am  Makefile.in  README.html  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in
doc/: Makefile.am  Makefile.in  apache-partial.conf  dns_udp_client.py  dns_udp_server.py  rc.sweetspot  rc.sweetspot-10  sweetauth.cgi  sweetspot.cgi  sweetspot.conf  sweetspot.html  sweetspot80.cgi  sweetuam.conf  uamclnt.py  uamproxyd.py  Без имени 2
doc/filters/: Makefile.am  Makefile.in  anonymous  cfhmskdn  cfhspb  default
doc/rc/: Makefile.am  Makefile.in  downstream.sh  inner.sh  outer.sh  sweet_watchdog.sh  upstream.sh
perl/: Makefile.am  Makefile.in
perl/SweetAuth/: Changes  MANIFEST  Makefile.PL  README  SweetAuth.xs  ppport.h
perl/SweetAuth/fallback/: const-c.inc  const-xs.inc
perl/SweetAuth/lib/: SweetAuth.pm
perl/SweetAuth/t/: SweetAuth.t
python/: INSTALL  MANIFEST  Makefile.am  Makefile.in  setup.py  sweetuammodule.c
python/examples/: async-client.py  sync-client.py
src/: .Makefile.swp  Makefile.am  Makefile.in  acct.c  acct.h  acct_method.c  acct_method.h  acct_method_detail.c  acct_method_detail.h  acct_method_detail_event.c  acct_method_detail_event.h  acct_method_detail_gauge.c  acct_method_detail_gauge.h  acct_method_detail_session.c  acct_method_detail_session.h  acct_method_detail_snat.c  acct_method_detail_snat.h  acct_scope.c  acct_scope.h  acct_scope_event.c  acct_scope_event.h  acct_scope_gauge.c  acct_scope_gauge.h  acct_scope_session.c  acct_scope_session.h  acct_scope_snat.c  acct_scope_snat.h  cache.c  cache.h  cfg.c  cfg.h  debug.c  debug.h  filter.c  filter.h  filter_match.c  filter_match.h  filter_match_ip.c  filter_match_ip.h  filter_match_tcp.c  (+115 more)
tests/: Makefile.am  Makefile.in  log.txt
tests/coreTest/: Makefile.amsss  coreTest.c  coreTest_new.c  sweetspot-3.conf  test.conf
tests/hashTableTest/: Makefile.amsss  hashTableTest.c
tests/natSrcEndpoinAsTest/: natSrcEndpointAssiTest.c  test.conf
tests/natSrcTest/: Makefile.amsss  natSrcTest.c  test.conf
tests/uamConcurrencyTest/: uamConcurrencyTest.c
