#
# Sweetspot -- an OSI layer 3 captive portal.
# Written by Ilya Etingof <ilya@glas.net>, 2006.
#
# Partially based on http://chillispot.org.
# Copyright (C) 2003, 2004, 2005 Mondru AB.
# The contents of this file may be used under the terms of the GNU
# General Public License Version 2, provided that the above copyright
# notice and this permission notice is included in all copies or
# substantial portions of the software.
#
# $Log: not supported by cvs2svn $
#

EXTRA_DIST = SweetAuth/Changes SweetAuth/Makefile.PL SweetAuth/MANIFEST \
SweetAuth/ppport.h SweetAuth/README SweetAuth/SweetAuth.xs \
SweetAuth/t/SweetAuth.t SweetAuth/fallback/const-c.inc \
SweetAuth/fallback/const-xs.inc SweetAuth/lib/SweetAuth.pm

